<resources>
    <string name="app_name">Sportdy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_game">Find Game</string>
    <string name="my_game">My Game</string>
    <string name="history">Game History</string>
    <string name="game">Sport Game</string>
    <string name="chat">Chat</string>
    <string name="friend">Friends</string>
    <string name="community">Community</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="host">Host</string>
    <string name="venue">Venue :</string>
    <string name="more">MORE</string>
    <string name="nav_drawer_open">Navigation Drawer Open</string>
    <string name="nav_drawer_close">Navigation Drawer Close</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tktiong">TkTioNG</string>
    <string name="acc_img">Account Image</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="game_name">Game Name</string>
    <string name="game_type">Game Type</string>
    <string name="game_date">Game Date</string>
    <string name="game_time">Game Time</string>
    <string name="location">Location</string>
    <string name="street1">Street 1</string>
    <string name="street2">Street 2</string>
    <string name="area">Area</string>
    <string name="postcode">Postcode</string>
    <string name="game_state">State</string>
    <string name="maxppl">Maximum Capacity</string>
    <string name="nowppl">Current Capacity</string>
    <string name="description">Description</string>
    <string name="hoster_name">Hoster Name</string>
    <string name="user_img_desc">User Image</string>
    <string name="hoster_img_desc">Hoster Image</string>
    <string name="game_type_img_desc">Game Type Image</string>
    <string name="add_game">Add Game</string>
    <string name="testing">Testing</string>
    <string name="update">Update</string>
    <string name="join">Join</string>
    <string name="unjoin">Unjoin</string>
    <string name="remove">Remove</string>
    <string name="gameid">GameID</string>
    <string-array name="GameType">
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Workout</item>
        <item>Jogging</item>
        <item>Soccer</item>
    </string-array>
    <string name="game_details"><b><u>Game Details</u></b></string>
    <string name="street_address">Street Address</string>
    <string name="slash">/</string>
    <string name="capacity">Capacity : </string>
    <string name="share">Share Game</string>

    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register">Sign up</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="register2">Register</string>
    <string name="logout">Log Out</string>

    <string name="url_server">https://sportdy.000webhostapp.com/api/</string>
    <string name="url_sport_game_read">sportGame/read.php</string>
    <string name="url_sport_game_create">sportGame/create.php</string>
    <string name="url_sport_game_update">sportGame/update.php</string>
    <string name="url_sport_game_delete">sportGame/delete.php</string>
    <string name="url_Users_read">Users/read.php</string>
    <string name="url_Users_read_one">Users/read_one.php</string>
    <string name="url_Users_create">Users/create.php</string>
    <string name="url_Users_update">Users/update.php</string>
    <string name="url_Users_delete">Users/delete.php</string>
</resources>
