<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="2dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview_game_outside">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardview_game"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivGameType"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/game_type_img_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvGameType"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/basketball_icon" />

                <TextView
                    android:id="@+id/tvGameType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/game_type"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivGameType"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/ivGameType" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

            <TextView
                android:id="@+id/lblVenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venue"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvLocation"
                app:layout_constraintEnd_toEndOf="@+id/ivHoster" />

            <TextView
                android:id="@+id/tvGameDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:text="@string/game_date"
                app:layout_constraintBottom_toTopOf="@+id/tvGameTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/lblHost"
                app:layout_constraintTop_toTopOf="@+id/ivHoster"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/tvGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_time"
                app:layout_constraintBottom_toBottomOf="@+id/ivHoster"
                app:layout_constraintEnd_toEndOf="@+id/tvGameDate"
                app:layout_constraintTop_toBottomOf="@+id/tvGameDate" />

            <TextView
                android:id="@+id/lblMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:text="@string/more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/lblHost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/host"
                app:layout_constraintBottom_toTopOf="@+id/tvHosterName"
                app:layout_constraintEnd_toStartOf="@+id/tvGameDate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/ivHoster"
                app:layout_constraintTop_toTopOf="@+id/ivHoster"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/tvHosterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hoster_name"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ivHoster"
                app:layout_constraintStart_toStartOf="@+id/lblHost"
                app:layout_constraintTop_toBottomOf="@+id/lblHost" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/location"
                app:layout_constraintStart_toStartOf="@+id/tvHosterName"
                app:layout_constraintTop_toBottomOf="@+id/ivHoster" />

            <ImageView
                android:id="@+id/ivHoster"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/hoster_img_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:srcCompat="@drawable/bowling_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>